tests/baselines/reference/unionTypeLiterals.errors.txt
unionTypeLiterals.ts(11,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'unionOfFunctionType' must be of type '(() => string) | (() => number)', but here has type '() => string | number'.
unionTypeLiterals.ts(15,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'unionOfConstructorType' must be of type '(new () => string) | (new () => number)', but here has type 'new () => string | number'.


==== unionTypeLiterals.ts (2 errors) ====
    // basic valid forms of union literals
    
    var simpleUnion: string | number;
    var unionOfUnion: string | number | boolean;
    
    var arrayOfUnions: (string | number)[];
    var arrayOfUnions: Array<string | number>;
    
    var unionOfFunctionType: (() => string) | (() => number);
    var unionOfFunctionType: { (): string } | { (): number };
    var unionOfFunctionType: () => string | number;
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'unionOfFunctionType' must be of type '(() => string) | (() => number)', but here has type '() => string | number'.
!!! related TS6203 unionTypeLiterals.ts:9:5: 'unionOfFunctionType' was also declared here.
    
    var unionOfConstructorType: (new () => string) | (new () => number);
    var unionOfConstructorType: { new (): string } | { new (): number };
    var unionOfConstructorType: new () => string | number;
        ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'unionOfConstructorType' must be of type '(new () => string) | (new () => number)', but here has type 'new () => string | number'.
!!! related TS6203 unionTypeLiterals.ts:13:5: 'unionOfConstructorType' was also declared here.